fix mobile display overflow

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,5 +1,4 @@
 html, body, main {
-	height: 100%;
 	background-color: #80abb2;
 	box-sizing: border-box;
 	font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
